commited after +profile -less UI

--- a/client/views/users/profile.html
+++ b/client/views/users/profile.html
@@ -36,6 +36,35 @@
             <div class="form-group">
                 <label for="name" class="control-label">Name *</label>
                 <input type="text" id="name" value="{{profile.name}}" placeholder="Name" class="form-control">
+                <label for="acctType" class="control-label">Account Type</label>
+                <input type="acctType" id="acctType" value="{{profile.acctType}}" placeholder="Name" class="form-control">
+                <label for="fName" class="control-label">First Name</label>
+                <input type="text" id="fName" value="{{profile.fName}}" placeholder="First Name" class="form-control">
+                <label for="lName" class="control-label">Last Name</label>
+                <input type="text" id="lName" value="{{profile.lName}}" placeholder="Last Name" class="form-control">
+                <label for="lName" class="control-label">Last Name</label>
+                
+                <label for="bio" class="control-label">User Bio</label>
+                <input type="text" id="bio" value="{{profile.bio}}" placeholder="bio" class="form-control">
+                <label for="country" class="control-label">Country</label>
+                <input type="text" id="country" value="{{profile.country}}" placeholder="country" class="form-control">
+                <label for="city" class="control-label">City</label>
+                <input type="text" id="city" value="{{profile.city}}" placeholder="City" class="form-control">
+                <label for="address" class="control-label">Address</label>
+                <input type="text" id="address" value="{{profile.address}}" placeholder="Address" class="form-control">
+                <label for="ImgThumb" class="control-label">Image Thumb</label>
+                <input type="text" id="ImgThumb" value="{{profile.ImgThumb}}" placeholder="ImgThumb" class="form-control">
+                <label for="ImgLarge" class="control-label">Image Large</label>
+                <input type="text" id="ImgLarge" value="{{profile.ImgLarge}}" placeholder="ImgLarge" class="form-control">
+                <label for="ImgHeader" class="control-label">Image for Header</label>
+                <input type="text" id="ImgHeader" value="{{profile.ImgHeader}}" placeholder="ImgHeader" class="form-control">
+                <label for="Avatar" class="control-label">Avatar</label>
+                <input type="text" id="Avatar" value="{{profile.Avatar}}" placeholder="Avatar" class="form-control">
+                <label for="dob" class="control-label">Date of Birth</label>
+                <input type="text" id="dob" value="{{profile.dob}}" placeholder="dob" class="form-control">
+                <label for="sex" class="control-label">Sex</label>
+                <input type="text" id="sex" value="{{profile.sex}}" placeholder="sex" class="form-control">
+                
             </div>            
             <button id="btnChangeProfile" type="submit" class="btn btn-success">Submit</button>                
         </form>
