--- a/client/views/users/view.html
+++ b/client/views/users/view.html
@@ -24,13 +24,64 @@
                     <td>{{emails.[0].address}}</td>
                 </tr>
                 <tr>
-                    <td><b>Name</b></td>
+                    <td><b>Nick Name</b></td>
                     <td>{{profile.name}}</td>
-                </tr>                
+                </tr>   
                 <tr>
-                    <td><b>Mugen Role Group</b></td>
+                    <td><b>First Name</b></td>
+                    <td>{{profile.fName}}</td>
+                </tr> 
+                <tr>
+                    <td><b>Last Name</b></td>
+                    <td>{{profile.lName}}</td>
+                </tr> 
+                <tr>
+                    <td><b>Global Role Group</b></td>
                     <td>{{mugenRoleGroup.name}}</td>
-                </tr>    
+                </tr> 
+
+                <tr>
+                    <td><b>User Bio</b></td>
+                    <td>{{profile.bio}}</td>
+                </tr> 
+                <tr>
+                    <td><b>Country</b></td>
+                    <td>{{profile.country}}</td>
+                </tr> 
+                <tr>
+                    <td><b>City</b></td>
+                    <td>{{profile.city}}</td>
+                </tr> 
+                <tr>
+                    <td><b>Address</b></td>
+                    <td>{{profile.address}}</td>
+                </tr> 
+                <tr>
+                    <td><b>Image Thumbnail</b></td>
+                    <td>{{profile.ImgThumb}}</td>
+                </tr> 
+                <tr>
+                    <td><b>Image Large</b></td>
+                    <td>{{profile.ImgLarge}}</td>
+                </tr> 
+                <tr>
+                    <td><b>Image Header</b></td>
+                    <td>{{profile.ImgHeader}}</td>
+                </tr> 
+                <tr>
+                    <td><b>Avatar</b></td>
+                    <td>{{profile.Avatar}}</td>
+                </tr> 
+                <tr>
+                    <td><b>DOB</b></td>
+                    <td>{{profile.dob}}</td>
+                </tr> 
+                <tr>
+                    <td><b>Sex</b></td>
+                    <td>{{profile.sex}}</td>
+                </tr> 
+                
+
                 <tr>
                     <td><b>Created at</b></td>
                     <td>{{meteorisFormatter "dateTime" createdAt}}</td>
