--- a/client/views/causes/_form.html
+++ b/client/views/causes/_form.html
@@ -25,14 +25,9 @@
 <input type="text" id="longDesc" value="{{longDesc}}" placeholder="Long Description" class="form-control">
 <span class="help-block">{{error "longDesc"}}</span>
 </div>
-<div class="form-group {{#if error 'imgThumb'}}has-error{{/if}}">
-<label for="imgThumb" class="control-label">Thumbnail Image </label>
-<input type="text" id="imgThumb" value="{{imgThumb}}" placeholder="Thumbnail Image" class="form-control">
-<span class="help-block">{{error "imgThumb"}}</span>
-</div>
 <div class="form-group {{#if error 'imgLarge'}}has-error{{/if}}">
-<label for="imgLarge" class="control-label">Large Image </label>
-<input type="text" id="imgLarge" value="{{imgLarge}}" placeholder="Large Image" class="form-control">
+<label for="imgLarge" class="control-label">Image </label>
+<input type="text" id="imgLarge" value="{{imgLarge}}" placeholder="Image" class="form-control">
 <span class="help-block">{{error "imgLarge"}}</span>
 </div>
 <div class="form-group {{#if error 'galleries'}}has-error{{/if}}">
