--- a/client/views/users/profile.html
+++ b/client/views/users/profile.html
@@ -35,9 +35,18 @@
         <form id="change_profile_form">        
             <div class="form-group">
                 <label for="name" class="control-label">Name *</label>
-                <input type="text" id="name" value="{{profile.name}}" placeholder="Name" class="form-control">
+                <input type="text" id="name" value="{{profile.name}}" placeholder="Name" disabled class="form-control">
                 <label for="acctType" class="control-label">Account Type</label>
-                <input type="acctType" id="acctType" value="{{profile.acctType}}" placeholder="Name" class="form-control">
+                <select id="acctType" placeholder="Name" class="form-control" name="acctType" >
+                    <option></option>
+                    <option value="1" {{getSelected profile.acctType "1"}}>Individual</option>
+                    <option value="2" {{getSelected profile.acctType "2"}}>Group</option>
+                    <option value="3" {{getSelected profile.acctType "3"}}>Non Profit</option>
+                    <option value="4" {{getSelected profile.acctType "4"}}>Social Enterprise</option>
+                    <option value="5" {{getSelected profile.acctType "5"}}>Company</option>
+                </select>
+                <label for="displayName" class="control-label">Display Name</label>
+                <input type="text" id="displayName" value="{{profile.displayName}}" placeholder="Display Name" class="form-control">
                 <label for="fName" class="control-label">First Name</label>
                 <input type="text" id="fName" value="{{profile.fName}}" placeholder="First Name" class="form-control">
                 <label for="lName" class="control-label">Last Name</label>
