be4 remove twbs:bootstrap

--- a/client/views/newsFeed/index.html
+++ b/client/views/newsFeed/index.html
@@ -51,7 +51,7 @@
                     {{#each models}}
                     <tr>
                         <td><input type="checkbox" class="checkAll" value="{{_id}}"/></td>
-                        <td>{{userId}}</td>
+                        <td>{{createdUserId}}</td>
 <td>{{meteorisFormatter 'date' dateCreated}}</td>
 <td>{{meteorisFormatter 'date' dateStatusChanged}}</td>
 <td>{{status}}</td>
