--- a/client/views/posts/view.html
+++ b/client/views/posts/view.html
@@ -21,7 +21,7 @@
             <tbody>
             <tr>
                 <td><b>UserId</b></td>
-                <td>{{userId}}</td>
+                <td>{{createdUserId}}</td>
             </tr>
                 <tr>
                     <td><b>Title</b></td>
