--- a/client/templates/basic/header.html
+++ b/client/templates/basic/header.html
@@ -19,20 +19,21 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">More Items <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="{{pathFor 'userProfileIndex'}}">User Profiles</a></li>
-                            <li><a href="{{pathFor 'messagesIndex'}}">Messages</a></li>
-                            <li><a href="{{pathFor 'notificationsIndex'}}">Notifications</a></li>
+                            <li><a href="{{pathFor 'followListsIndex'}}">Follow Lists</a></li>
                             <li class="divider"></li>
                             <li><a href="{{pathFor 'newsFeedIndex'}}">News Feed</a></li>
                             <li><a href="{{pathFor 'suggestsIndex'}}">Suggest</a></li>
+                            <li><a href="{{pathFor 'messagesIndex'}}">Messages</a></li>
+                            <li><a href="{{pathFor 'notificationsIndex'}}">Notifications</a></li>
                             <li class="divider"></li>
-                            <li><a href="{{pathFor 'campsIndex'}}">Campaigns</a></li>                                                        
-                            <li><a href="{{pathFor 'causesIndex'}}">Causes</a></li>
-                            <li><a href="{{pathFor 'projectsIndex'}}">Projects</a></li>
+                            <li><a href="{{pathFor 'updateArticleIndex'}}">Update Messages</a></li>
                             <li><a href="{{pathFor 'postsIndex'}}">Posts</a></li>
                             <li class="divider"></li>
                             <li><a href="{{pathFor 'votesIndex'}}">Votes</a></li>
                             <li><a href="{{pathFor 'ownersIndex'}}">Owners</a></li>
-                            <li><a href="{{pathFor 'followListsIndex'}}">Follow Lists</a></li>
+                            <li class="divider"></li>
+                            <li><a href="{{pathFor 'teamsIndex'}}">Teams</a></li>
+                            <li><a href="{{pathFor 'jobsIndex'}}">Jobs</a></li>
                             
                             <!--<li><a href="{{pathFor 'mugenRoleActions'}}">Role Actions</a></li>-->
                         </ul>
