--- a/client/views/newsFeed/_form.html
+++ b/client/views/newsFeed/_form.html
@@ -2,7 +2,7 @@
     <form id="newsFeed_form"> 
         <div class="form-group {{#if error 'userId'}}has-error{{/if}}">
 <label for="userId" class="control-label">userId *</label>
-<input type="text" id="userId" value="{{CurrentUserID}}" disabled placeholder="userId" class="form-control">
+<input type="text" id="userId" value="{{createdUserId}}" disabled placeholder="{{createdUserId}}" class="form-control">
 <span class="help-block">{{error "userId"}}</span>
 </div>
 <div class="form-group {{#if error 'dateCreated'}}has-error{{/if}}">
