--- a/client/views/posts/index.html
+++ b/client/views/posts/index.html
@@ -49,7 +49,7 @@
                         <td>{{title}}</td>
                         <td><img class="image" src="{{#if image}}{{app "baseUrl"}}{{image.url}}{{else}}{{app "baseUrl"}}/images/noimage.jpg{{/if}}"/></td>
                         <td>{{createdUser.profile.name}}</td>
-                        <td>UserId:{{userId}}</td>
+                        <td>UserId:{{createdUserId}}</td>
                         <td>
                             <a href="{{pathFor 'postsView'}}" class="btn btn-default"><i class="glyphicon glyphicon-eye-open"></i></a>
                             <a href="{{pathFor 'postsUpdate'}}" class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i></a>
