--- a/client/views/updateArticle/insert.html
+++ b/client/views/updateArticle/insert.html
@@ -1,19 +1,19 @@
-<template name="projectsInsert">    
+<template name="updateArticleInsert">    
     <div class="container">
         <!--Breadcrumbs-->
         <ol class="breadcrumb">
             <li><a href="{{pathFor 'sitesIndex'}}">Home</a></li>
-            <li><a href="{{pathFor 'projectsIndex'}}">Projects</a></li>
+            <li><a href="{{pathFor 'updateArticleIndex'}}">UpdateArticle</a></li>
             <li class="active">insert</li>
         </ol>
 
         <div id="basic-form">
             <div class="title">
-                <h3 class="pull-left">Insert Projects</h3>
+                <h3 class="pull-left">Insert UpdateArticle</h3>
             </div>
             <div class="clearfix"></div>
 
-            {{> projects_form}}  
+            {{> updateArticle_form}}  
         </div>        
     </div>
 </template>
