--- a/client/views/updateArticle/update.html
+++ b/client/views/updateArticle/update.html
@@ -1,19 +1,19 @@
-<template name="causesInsert">    
+<template name="updateArticleUpdate">
     <div class="container">
         <!--Breadcrumbs-->
         <ol class="breadcrumb">
             <li><a href="{{pathFor 'sitesIndex'}}">Home</a></li>
-            <li><a href="{{pathFor 'causesIndex'}}">Causes</a></li>
-            <li class="active">insert</li>
+            <li><a href="{{pathFor 'updateArticleIndex'}}">UpdateArticle</a></li>
+            <li class="active">update</li>
         </ol>
 
         <div id="basic-form">
             <div class="title">
-                <h3 class="pull-left">Insert Causes</h3>
+                <h3 class="pull-left">Update UpdateArticle</h3>
             </div>
             <div class="clearfix"></div>
 
-            {{> causes_form}}  
+            {{> updateArticle_form model}}  
         </div>        
     </div>
 </template>
