--- a/client/templates/basic/header.html
+++ b/client/templates/basic/header.html
@@ -64,7 +64,7 @@
                         {{#if currentUser}}
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{currentUser.profile.name}} <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="{{pathFor 'usersProfile'}}">Profile</a></li>
+                            <li><a href="{{pathFor 'usersProfile'}}">User Account</a></li>
                             <li><a href="#">Help</a></li>
                             <li class="divider"></li>
                             <li id="btnLogout"><a href="#">Logout</a></li>
