--- a/client/sass/meteoris.scss
+++ b/client/sass/meteoris.scss
@@ -1,16 +1,16 @@
-/* 
+/*
     Created on : Jan 26, 2015, 8:49:38 AM
     Author     : Pras Abdilah
 */
 
 @font-face{
     font-family: 'Oswald';
-    src: url(/../../../font/oswald/Oswald-Regular.otf);
+    src: url(/font/oswald/Oswald-Regular.otf);
 }
 @font-face{
     font-family: 'Oswald';
     font-weight: 700;
-    src: url(/../../../font/oswald/Oswald-Bold.otf);
+    src: url(/font/oswald/Oswald-Bold.otf);
 }
 html, html body{
     position: relative;
