--- a/client/views/users/avatar/step1/step1.css
+++ b/client/views/users/avatar/step1/step1.css
@@ -26,3 +26,24 @@
   background-color: white !important;
   cursor: text !important;
 }
+
+.avatar-ready-image button.btn.btn-danger.btn-xs {
+  position: absolute;
+  top: 5px;
+  right: 20px;
+  line-height: 16pt;
+  width: 20pt;
+  height: 20pt;
+  font-size: 14pt;
+  border-radius: 50% !important;
+  box-shadow: 0 0 4px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.28);
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 0.2s, opacity 0.2s linear;
+}
+
+.avatar-ready-image:hover button.btn.btn-danger.btn-xs{
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
+}
