--- a/client/views/users/avatar/step1/step1.html
+++ b/client/views/users/avatar/step1/step1.html
@@ -24,33 +24,6 @@
         </div>  <!-- /.panel -->
       </div>
     </div>
-
-    <div class="row">
-      <div class="col-md-12">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            Paste image URL
-          </div>
-          <div class="panel-body">
-            <form class="form-inline">
-              <div class="form-group">
-                <div class="input-group">
-                  <div class="input-group-addon">
-                    <i class="fa fa-globe"></i>
-                  </div>
-                  <input type="text" id="avatar-picker-url" class="form-control" placeholder="https://example.com/avatar.png">
-                </div>
-              </div>
-              <button id="avatar-picker-url-btn" class="btn btn-primary">
-                <i class="fa fa-paper-plane"></i>
-              </button>
-            </form>
-          </div>
-        </div>  <!-- /.panel -->
-      </div>
-    </div>
-
-
     <div class="row">
       <div class="col-md-12">
         <div class="panel panel-default">
@@ -59,7 +32,7 @@
           </div>
           <div class="panel-body">
             <div class="container-fluid">
-              <div class="row">
+              <div class="avatars-container row">
                 <div class="avatar-ready-image col-md-3">
                   <img src="/images/avatars/no_image.jpg" alt="No image!" class="img-rounded">
                 </div>
