--- a/client/views/users/profile.html
+++ b/client/views/users/profile.html
@@ -13,10 +13,10 @@
         </div>
         <div class="clearfix"></div>
         <div class="row">
-          <div class="col-xs-3">
+          <div class="avatar-container-prof">
             {{> avatar}}
           </div>
-          <div class="col-xs-9">
+          <div class="profile-info">
             <table class="table">
                 <tbody>
                     <tr>
